--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,31 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import './highlight.css';
+
 ::selection {
-  background-color: #47a3f3;
-  color: #fefefe;
-}
-
-:root {
-  --sh-class: #8d85ff;
-  --sh-identifier: #354150;
-  --sh-sign: #8996a3;
-  --sh-property: #0550ae;
-  --sh-entity: #249a97;
-  --sh-jsxliterals: #bf7db6;
-  --sh-string: #00a99a;
-  --sh-keyword: #f47067;
-  --sh-comment: #a19595;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --sh-identifier: #f8f8f2;
-    --sh-string: #0fa295;
-  }
-  html {
-    color-scheme: dark;
-  }
+  @apply bg-blue-500 text-white;
 }
 
 .prose .anchor {
@@ -57,7 +36,7 @@
 }
 
 .prose pre {
-  @apply bg-neutral-50 dark:bg-neutral-900 rounded-lg overflow-x-auto border border-neutral-200 dark:border-neutral-900 py-2 px-3 text-sm;
+  @apply rounded-lg overflow-x-auto p-3 border border-neutral-200 dark:border-neutral-900 text-sm;
 }
 
 .prose code {
